# DrugSight

./: .gitignore  README.md  pyproject.toml  requirements.txt
.beads/: issues.jsonl
.notes/: session_log.md
.streamlit/: config.toml
data/: sample_docking_results.csv  sample_drugbank.csv  sample_targets.json  training_repurposing_cases.csv
notebooks/: huntingtons_case_study.ipynb
src/drugsight/: __init__.py  __main__.py  alphafold_client.py  app.py  config.py  disease_targets.py  docking_engine.py  drug_library.py  ml_scorer.py  pipeline.py  schemas.py
tests/: conftest.py  test_alphafold_client.py  test_disease_targets.py  test_docking_engine.py  test_drug_library.py  test_integration.py  test_ml_scorer.py  test_pipeline.py
